[package]
name = "rs-sqlite-symbols"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
chrono = "0.4.22"
enum_dispatch = "0.3.8"
rusqlite = { version = "0.28.0", features = ["array", "vtab", "bundled"] }
